--- a/app/src/main/res/layout/fragment_club_manager_posts_main_page.xml
+++ b/app/src/main/res/layout/fragment_club_manager_posts_main_page.xml
@@ -7,10 +7,11 @@
     tools:context=".ui.home.clubManager.requestPages.posts.ClubManagerPostsMainPage">
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_post"
+        android:id="@+id/btn_approved"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/normal_background"
         android:drawableRight="@drawable/expand_right_light"
@@ -20,13 +21,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="223dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_pending" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_forms"
+        android:id="@+id/btn_rejected"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/normal_background"
         android:drawableRight="@drawable/expand_right_light"
@@ -36,13 +38,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="288dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_approved" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_posts"
+        android:id="@+id/btn_pending"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="49dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/normal_background"
         android:drawableRight="@drawable/expand_right_light"
@@ -52,7 +55,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="160dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView25" />
 
     <TextView
         android:id="@+id/textView24"
@@ -90,12 +93,13 @@
         android:id="@+id/textView25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="9dp"
         android:fontFamily="@font/poppins"
         android:text="Posts"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="86dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView58" />
 
     <TextView
         android:id="@+id/textView58"
@@ -105,5 +109,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="59dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
