--- a/app/src/main/res/layout/fragment_sks_admin_clubs.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_clubs.xml
@@ -57,6 +57,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/normal_background"
+        android:backgroundTint="#EBEBEB"
         app:iconifiedByDefault="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
